--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
         <li>Xxxxx Ashley</li>
         <br>
         <br>
-        <li>2th Floor xxxxx Building x-x-x Nishiazabu, Minato-ku, Tokyo 106-0031 Japan</li>
+        <li>2th Floor ABC Building 1-2-3 Nishiazabu, Minato-ku, Tokyo 106-0031 Japan</li>
         <li>tel: 000-0000-0000</li>
-        <li>url: www.xxxxxx.jp</li>
-        <li>mail: xxx@xxxxxx.jp</li>
+        <li>url: www.abcdefg.jp</li>
+        <li>mail: abc@abcdefg.jp</li>
       </ul>
-      <p>プロフィールテキストテキストテキストテキストテキストテキストテキストテキストテキストスト テキストテキストテキストテキ ストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキスト</p>
+      <p>プロフィール</p>
+      <p>ゴーシュは戸棚のあんばい楽長たちがセロと叫び虎ございない。それからどんどんそれどころますございという羽でした。</p>
     </section>
     <section id="works" class="wrapper">
       <h2>Works</h2>
@@ -58,16 +59,16 @@
     <section id="news" class="wrapper">
       <h2>News</h2>
       <dl>
-        <dt>2020.XX.XX</dt>
-        <dd>デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</dd>
-        <dt>2020.XX.XX</dt>
-        <dd>ＸＸ月ＸＸ日から写真集「ＸＸＸＸＸＸＸ」の販売を開始します。</dd>
-        <dt>2019.XX.XX</dt>
-        <dd>【イベント開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト</dd>
-        <dt>2019.XX.XX</dt>
-        <dd>デザイン雑誌「ＸＸＸＸＸＸ Vol.10』に掲載していただきました。</dd>
-        <dt>2019.XX.XX</dt>
-        <dd>【個展開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト</dd>
+        <dt>2020.5.17</dt>
+        <dd>デザイン雑誌「いろはにほへと Vol.11』に掲載していただきました。</dd>
+        <dt>2020.3.13</dt>
+        <dd>1月1日から写真集「あいうえお」の販売を開始します。</dd>
+        <dt>2019.12.1</dt>
+        <dd>【イベント開催のお知らせ】親譲りの無鉄砲で小供の時から損ばかりしている。</dd>
+        <dt>2019.11.10</dt>
+        <dd>デザイン雑誌「いろはにほへと Vol.10』に掲載していただきました。</dd>
+        <dt>2019.9.18</dt>
+        <dd>【個展開催のお知らせ】親譲りの無鉄砲で小供の時から損ばかりしている。</dd>
       </dl>
     </section>
     <section id="contact" class="wrapper">
